--- a/src/app/components/data-visualization/data-visualization.component.html
+++ b/src/app/components/data-visualization/data-visualization.component.html
@@ -11,5 +11,12 @@
     </mat-form-field>
 
 <button type="button" class="btn btn-primary" (click)="onSubmit()">submit</button>
-
+<button type="button" class="btn btn-primary" (click)="buildTopVeicles()">build</button>
 <app-column2d></app-column2d>
+
+<div *ngIf="topVeiclesData$ | async as topVeiclesData; else loading">
+    <app-column2d [chartSource] = "topVeiclesData"></app-column2d>
+</div>
+<ng-template #loading>
+    <span>LOADING...</span>
+</ng-template>
