testing chart with Input()

--- a/src/app/components/data-visualization/data-visualization.component.html
+++ b/src/app/components/data-visualization/data-visualization.component.html
@@ -1,21 +1,24 @@
-
-    <mat-form-field class="mr-2" >
-        <input matInput [matDatepicker]="begin" placeholder="Choose a date" [formControl]="initialDate">
-        <mat-datepicker-toggle matSuffix [for]="begin"></mat-datepicker-toggle>
-        <mat-datepicker #begin></mat-datepicker>
-    </mat-form-field>
-    <mat-form-field class="mr-2">
-        <input matInput [matDatepicker]="end" placeholder="Choose a date" [formControl]="lastDate">
-        <mat-datepicker-toggle matSuffix [for]="end"></mat-datepicker-toggle>
-        <mat-datepicker #end></mat-datepicker>
-    </mat-form-field>
-
-<button type="button" class="btn btn-primary" (click)="onSubmit()">submit</button>
-<button type="button" class="btn btn-primary" (click)="buildTopVeicles()">build</button>
-<app-column2d></app-column2d>
-
+<app-dashboard-nav></app-dashboard-nav>
+<div class="field">
+    <div>
+        <mat-form-field class="mr-2">
+            <input matInput [matDatepicker]="begin" placeholder="Choose a date" [formControl]="initialDate">
+            <mat-datepicker-toggle matSuffix [for]="begin"></mat-datepicker-toggle>
+            <mat-datepicker #begin></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field class="mr-2">
+            <input matInput [matDatepicker]="end" placeholder="Choose a date" [formControl]="lastDate">
+            <mat-datepicker-toggle matSuffix [for]="end"></mat-datepicker-toggle>
+            <mat-datepicker #end></mat-datepicker>
+        </mat-form-field>
+        <button type="button" class="btn btn-light" (click)="onSubmit()">submit</button>
+        <button type="button" class="btn btn-primary" (click)="buildTopVeicles()">build</button>
+    </div>
+    <app-column2d></app-column2d>
+</div>
 <div *ngIf="topVeiclesData$ | async as topVeiclesData; else loading">
-    <app-column2d [chartSource] = "topVeiclesData"></app-column2d>
+    <p>{{topVeiclesData}}</p>
+    <app-column2d [chartData] = "topVeiclesData"></app-column2d>
 </div>
 <ng-template #loading>
     <span>LOADING...</span>
