--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,17 @@
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    background-color: rgba(247, 244, 244, 0.514);
+}
+.field-border{
+    border: 2px;
+    border-style: solid;
+    border-color: rgb(145, 140, 140);
+    min-width: 600px;
+    min-height: 550px;
+    padding: 10px;
+    
+}
