--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,5 +14,13 @@ body {
     min-width: 600px;
     min-height: 550px;
     padding: 10px;
+    text-align: center;
     
+}
+
+.dashboard-container{
+    margin: 15px 
+}
+.filter{
+    min-height: 70px;
 }
