--- a/src/app/components/data-visualization/column2d/column2d.component.html
+++ b/src/app/components/data-visualization/column2d/column2d.component.html
@@ -1,4 +1,6 @@
-<fusioncharts
-    [chartConfig]=chartConfig
-    [dataSource]=dataSource >
-</fusioncharts>
+<div class="container">
+    <div class="chartShadow">
+        <fusioncharts class="charts" [chartConfig]=chartConfig [dataSource]=dataSource>
+        </fusioncharts>
+    </div>
+</div>
