--- a/src/app/components/data-visualization/dashboard-nav/dashboard-nav.component.html
+++ b/src/app/components/data-visualization/dashboard-nav/dashboard-nav.component.html
@@ -15,7 +15,10 @@
         <a class="nav-link" routerLinkActive="active" routerLink="/clientes" href="#">Clientes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/fuel">Administrativo</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/fuel">Combustivel</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/admin">Administrativo</a>
       </li>
     </ul>
   </div>
