loading css added

--- a/src/app/components/data-visualization/clientes/clientes.component.html
+++ b/src/app/components/data-visualization/clientes/clientes.component.html
@@ -71,6 +71,6 @@
     </div> -->
 
         <ng-template #loading>
-            <span>LOADING...</span>
+            <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
         </ng-template>
     </div>
