--- a/src/app/components/data-visualization/admin/admin.component.html
+++ b/src/app/components/data-visualization/admin/admin.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard-container">
-    <div id="fuelPrice" class="col-12">
+    <!-- <div id="fuelPrice" class="col-12">
         <div class="field-border">
             <div class="filter">
                 <p>Cotação dos Combustiveis</p>
@@ -22,7 +22,7 @@
                 </app-mult-line2d>
             </div>
         </div>
-    </div>
+    </div> -->
     <div id="seasonalityPerWeek" class="col-12">
         <div class="field-border">
             <div class="filter">
@@ -99,7 +99,7 @@
 
 
 
-    <div id="topAndLosers" class="col-12">
+    <!-- <div id="topAndLosers" class="col-12">
         <div class="field-border">
             <div class="filter">
                 <p>Maiores e Menores Lucradores</p>
@@ -121,8 +121,8 @@
                 <img [src]="topAndLosersData.imageBase64"/>
             </div>
         </div>
-    </div>
+    </div> -->
     <ng-template #loading>
-        <span>LOADING...</span>
+        <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
     </ng-template>
 </div>
