--- a/src/app/components/data-visualization/dashboard-nav/dashboard-nav.component.html
+++ b/src/app/components/data-visualization/dashboard-nav/dashboard-nav.component.html
@@ -20,6 +20,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLinkActive="active" routerLink="/admin">Administrativo</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/cadcliente">Cadastrar Cliente</a>
+      </li>
     </ul>
   </div>
 </nav>
